# testRenovate

./: README.md  renovate.json
.github/: CODEOWNERS
teamARepo/: build.gradle.kts
teamBRepo/: pyproject.toml
teamCRepo/: package.json
